Issue #SB-24496 fix: Coursebatch create, update issue fix